--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dayjs": "^1.11.10",
     "express": "^4.18.2",
     "mongoose": "^7.6.3",
     "nodemon": "^3.0.1"
